--- a/cfg/navigator.cfg
+++ b/cfg/navigator.cfg
@@ -10,5 +10,5 @@ gen.add("k2",       double_t,    0, "Pose Controller k2", 0.4,  0., 2.0)
 gen.add("k3",       double_t,    0, "Pose Controller k3", 0.4,  0., 2.0)
 
 
-exit(gen.generate(PACKAGE, "navigator", "Navigator"))
+exit(gen.generate(PACKAGE, "navigator", "navigator"))
 
