--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 
 scripts/controllers/*
 scripts/HW*/*
+scripts/planners/P1_astar.py
+scripts/controllers/P1_differential_flatness.py
+scripts/controllers/P2_pose_stabilization.py
+scripts/controllers/P3_trajectory_tracking.py
+scripts/controllers/P4_optimal_control.py
