Minor change to the project.launch file. .gitignore now ignores local *_soln.py files.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ scripts/controllers/P1_differential_flatness.py
 scripts/controllers/P2_pose_stabilization.py
 scripts/controllers/P3_trajectory_tracking.py
 scripts/controllers/P4_optimal_control.py
+scripts/**/*_soln.py
